# cv-plot-qt

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
CvPlotQt/: CMakeLists.txt
CvPlotQt/examples/: CMakeLists.txt
CvPlotQt/examples/inc/: Helpers.h
CvPlotQt/examples/qrc/: DemoOneMinute.qml  DemoProperties.qml  DemoSync.qml  DemoTwoMinutes.qml  ui.qrc
CvPlotQt/examples/src/: Helpers.cpp  examples.cpp  main.cpp
CvPlotQt/ext/catch2/: CMakeLists.txt
CvPlotQt/inc/CvPlotQt/: AxesView.h  DrawableQuick.h  ImageQuick.h  SeriesQuick.h  libdef.h  registerQtTypes.h  version.h
CvPlotQt/inc/CvPlotQt/Internal/: declareQtTypes.h
CvPlotQt/src/: AxesView.cpp  ImageQuick.cpp  SeriesQuick.cpp  registerQtTypes.cpp  version.cpp
CvPlotQt/tests/: CMakeLists.txt  test_plotqt.cpp
